# ReAlignPro

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
docs/: release_report_GitHub_Bioconda.md
examples/test/: README.md  run_test.sh
examples/test/files/: query_RBFOX1fragment.fa  query_hg38genome.fa
src/realignpro/: __init__.py  cli.py  fa2maf.py  maf2bed.py  tsv2fig.py
src/realignpro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_help.py
